--- a/manifest.json
+++ b/manifest.json
@@ -9,27 +9,27 @@
     "orientation": "portrait",
     "icons": [
       {
-        "src": "/icons/music-64.png",
+        "src": "./icons/music-64.png",
         "sizes": "64x64",
         "type": "image/png"
       },
       {
-        "src": "/icons/music-144.png",
+        "src": "./icons/music-144.png",
         "sizes": "144x144",
         "type": "image/png"
       },
       {
-        "src": "/icons/music-192.png",
+        "src": "./icons/music-192.png",
         "sizes": "64x64",
         "type": "image/png"
       },
       {
-        "src": "/icons/icon-256.png",
+        "src": "./icons/icon-256.png",
         "sizes": "256x256",
         "type": "image/png"
       },
       {
-        "src": "/icons/icon-512.png",
+        "src": "./icons/icon-512.png",
         "sizes": "512x512",
         "type": "image/png"
       }
