--- a/manifest.json
+++ b/manifest.json
@@ -24,12 +24,12 @@
         "type": "image/png"
       },
       {
-        "src": "./icons/icon-256.png",
+        "src": "./icons/music-256.png",
         "sizes": "256x256",
         "type": "image/png"
       },
       {
-        "src": "./icons/icon-512.png",
+        "src": "./icons/music-512.png",
         "sizes": "512x512",
         "type": "image/png"
       }
