--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "Istea Music Player",
     "short_name": "IsteaPlayer",
     "description": "Aplicación PWA de reproducción de música.",
-    "start_url": "/index.html",
+    "start_url": "/isteaplayer/index.html",
     "display": "standalone",
     "background_color": "#606c76",
     "theme_color": "#606c76",
